# elkai

./: CMakeLists.txt
BLKH-1.1/: Makefile  README
BLKH-1.1/SRC/: BAP.c  BBSSP.c  BBSSPA.c  BBSSP_non_recursive.c  BSCSSP.c  C.c  Distance_SPECIAL.c  GetTimeUsage.c  Heap.c  Makefile  Makefile_O  Makefile_R  PrintParameters.c  ReadParameters.c  ReadProblem.c  SolveBTSP.c  SolveTSP.c  SolveTransformedTSP.c  TwoMax.c  WriteTour.c
BLKH-1.1/SRC/INCLUDE/: BLKH.h  BLKHHeap.h  LKH.h
LKH-2.0.9/SRC/: AllocateStructures.c  FreeStructures.c  Genetic.c  ReadParameters.c  ReadProblem.c
elkai/: __init__.py  _elkai.c
tests/: ftv100.atsp  test_elkai.py
