cmake_minimum_required(VERSION 3.11.0)
project(elkai)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
find_package(PythonExtensions REQUIRED)

include_directories(${CMAKE_SOURCE_DIR}/LKH-2.0.9/SRC/INCLUDE)
include_directories(${CMAKE_SOURCE_DIR}/BLKH-1.1/SRC/INCLUDE)
file(GLOB LKH_SRC "LKH-2.0.9/SRC/*.c")
file(GLOB BLKH_SRC "BLKH-1.1/SRC/*.c")
add_library(LKH ${LKH_SRC})
add_executable(LKH_EXEC ${LKH_SRC})
add_library(BLKH ${BLKH_SRC})
target_link_libraries(LKH_EXEC m)
target_compile_definitions(BLKH PRIVATE TWO_LEVEL_TREE)
target_compile_definitions(LKH PRIVATE TWO_LEVEL_TREE)

add_library(_elkai MODULE elkai/_elkai.c)
python_extension_module(_elkai)
target_link_libraries(_elkai LKH BLKH)

install(TARGETS _elkai LIBRARY DESTINATION elkai)
install(TARGETS LKH_EXEC RUNTIME DESTINATION elkai)
